--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="سراج: منصة تعليمية تفاعلية لتعليم الأطفال القرآن الكريم والسنة النبوية بطريقة ممتعة ومشوقة" />
     <meta name="author" content="Siraj" />
     <meta name="theme-color" content="#006654" />
+        <link rel="icon" type="image/png" href="/src/assets/star-mascot.png" />
+
 
     <meta property="og:title" content="سراج - تعليم القرآن للأطفال" />
     <meta property="og:description" content="منصة تعليمية تفاعلية لتعليم الأطفال القرآن الكريم والسنة النبوية" />
